Port TreeLopper to CraftBook 5