@@ -68,7 +68,7 @@ public class ItemParser {
         return lines.stream()
             .map(line -> getItem(line, wild))
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static String toMinifiedId(ItemType holder) {
